--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-11-10 Ales Dolezal (2.1.2)
+
+    * Little fix in installation procedure
+	- MANIFEST.in updated
+
 2008-11-08 Jaromir Talir (2.1.1)
 
     * Renaming 
