--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-10 Tomas Divis (2.1.3)
+
+    * Adding few log messages to debug memory consumtion
+
 2008-11-10 Ales Dolezal (2.1.2)
 
     * Little fix in installation procedure
