--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2009-07-09 Jiri Sadek 
+
+    * Logging system rewritten to support different handlers -
+	syslog/file/console (using logging python module)
+
+    * Bugfix in configuration template
+
 2009-07-03 Jiri Sadek (2.1.7)
     * Bugfixes for previous release (last was quite broken)
         - install procedure
