--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,19 @@
-2009-07-09 Jiri Sadek 
+2009-07-09 Jiri Sadek, Tomas Divis
+
+    * Fixes in mail module to properly update number of attempts (sending
+      mails)
+
+    * External processes is now executed with common 'runCommand' method with
+      timeout settings
+
+    * Fixes in installation procedure, implemented --no-check-deps for
+      disabling of checking dependencies
+
+    * Removed use of _quote() method from pygresql library - due to changes in
+      pygresql-4.0
 
     * Logging system rewritten to support different handlers -
-	syslog/file/console (using logging python module)
+      syslog/file/console (using logging python module)
 
     * Bugfix in configuration template
 
