--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-2009-11-09 Jiri Sadek
+2009-11-09 Jiri Sadek (2.1.9)
 
     * Fixed configuration defaults (logging option)
 
@@ -7,7 +7,7 @@
 
     * Fixed email signing procedure - exception type changed
 
-2009-07-09 Jiri Sadek, Tomas Divis
+2009-07-09 Jiri Sadek, Tomas Divis (2.1.8)
 
     * Fixes in mail module to properly update number of attempts (sending
       mails)
