--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2011-06-02 Jiri Sadek (2.2.2)
+
+    * Mailer - little tweak to not loose one send period because of penalized
+               mail types when no other mail types are ready to send
+
 2011-05-30 Jiri Sadek (2.2.1)
 
     * Mailer - bugfixed list of attachments
