ChangeLog update and version bump
git-svn-id: file:///data/svn/enum/pyfred/trunk@20455 b60c293d-5e0d-0410-87b2-fb9704ccd4b5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-05-14 Jiri Sadek (2.2.3)
+
+    * Mailer - add support for IMAP SSL
+
 2011-06-02 Jiri Sadek (2.2.2)
 
     * Mailer - little tweak to not loose one send period because of penalized
