--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2014-02-13 Michal Strnad (2.6.0)
+
+    * Mail default header is now controlled by mail type
+
+    * Support for multiple signing certificates (distinguished by sender e-mail address)
+
 2013-11-06 Jaromir Talir, Zdenek Bohm (2.5.2)
 
     * Fix genzone - glue records generation
