--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2017-03-02 (2.8.0)
+
+    * Configuration files documentation
+
+    * Fedora packaging
+
 2016-03-21 Jaromir Talir (2.7.2)
 
     * Fix rpm build
