--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2018-11-20 (2.10.0)
+
+    * COPR build
+
+    * AUTHORS file update
+
 2018-01-16 (2.9.0)
 
     * Static IDL for python (precompiled)
